Javax for tomcat 9 and DataNucleus 5.  Drop maven tomcat 7 plugin.